# spectre-backend-single

./: .env.example  .gitignore  .huggingfaceignore  Dockerfile  Makefile  README.md  alembic.ini  clone_scan_feature.py  deploy.py  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  hf_sec.py  migration.sql  pyproject.toml  ruff.toml  start.sh  supervisord.conf  supervisord.conf.tmpl
.github/workflows/: deploy-hf.yml
Docs/: deployment-guide.md  openapi.json
artifact/: best_model.keras
artifact/multimodel/ilhamcaesar/: model_final_v1.2.keras
migrations/: env.py
migrations/versions/: .gitkeep  0f4d9e8c7b6a_remove_obsolete_callback_schema.py  0f4d9e8c7b6a_remove_webhook_delivery_schema.py  2bbadc2311f5_remove_email_verification_system.py  4a2fbae74927_implement_identity_separation_schema.py  6c915d21ab82_initial_schema.py  9f3b2c1d4e5f_sdk_session_idempotency_contract.py  a4d6e2b9c8f1_hosted_auth_delivery.py  b8f3a1c92d01_add_system_config_table.py  c2c2c2c2c2c2_sync_supabase_schema.py  c6abc68c896c_add_keepalive_table.py  d1ab1537da5c_add_role_to_user.py  e3f7bd8c1205_add_benchmark_config.py  e58ec07aec6a_fix_migration_fork_and_sync_with_.py  f1f1f1f1f1f1_restore_webhook_columns.py
scratch/: check_supabase.py  test_db_columns.py
scripts/: audit-test-deps.ps1  deploy_env.py  postman_push.py  run-tests.ps1  save_google_auth.py
seeds/: __init__.py  __main__.py  base.py  registry.py  runner.py
seeds/factories/: __init__.py  app_factory.py  user_factory.py
seeds/static/: __init__.py  admin_user.py  default_app.py  system_config.py
src/spectre/: __init__.py  config.py  main.py
src/spectre/application/: __init__.py  api_key_use_cases.py  auth_use_cases.py  benchmark_use_cases.py  diagnostics_builder.py  face_use_cases.py  oauth_use_cases.py  tenant_use_cases.py
src/spectre/core/: __init__.py  logger.py
src/spectre/domain/: __init__.py
src/spectre/domain/entities/: __init__.py  api_key.py  auth_session.py  face_profile.py  refresh_token.py  tenant_application.py  user.py  webhook_delivery.py
src/spectre/domain/exceptions/: __init__.py  auth_exceptions.py  (+3 more)
src/spectre/infrastructure/: __init__.py
src/spectre/interface/: __init__.py  dependencies.py
src/spectre/workers/: __init__.py  celery_app.py  signals.py
supabase/.temp/: linked-project.json  pooler-url  project-ref
tests/: conftest.py
tests/infrastructure/ml/: test_fas_model_registry.py
tests/integration/: test_api.py
tests/postman/: env-docker.json  env-hf-spaces.json  env-local.json  spectre-api-v1.postman_collection.json
tests/unit/: test_application_contract.py  test_application_router.py  test_auth_router.py  test_face_router.py  test_health.py  test_hosted_auth_router.py  test_middleware.py  test_security.py  test_session_client_log_router.py  test_value_objects.py  test_webhook_application_contract.py  test_webhook_session_router.py  test_webhooks.py
(+70 files in other folders)
