[project]
name = "spectre"
version = "0.1.0"
description = "Spectre — AI-Powered Facial Authentication Platform"
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "Proprietary" }
authors = [{ name = "Spectre Team" }]

dependencies = [
    # --- Web Framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # --- Cache ---
    "redis[hiredis]>=5.2.0",

    # --- Auth & Security ---
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0.0",  # Fix passlib compatibility bug with modern bcrypt
    "pyotp>=2.9.0",
    "authlib>=1.4.0",
    "itsdangerous>=2.2.0",
    "cryptography>=44.0.0",

    # --- HTTP Client ---
    "httpx>=0.28.0",

    # --- Rate Limiting ---
    "slowapi>=0.1.9",

    # --- ML / Inference ---
    "tensorflow-cpu>=2.16.0",
    "keras>=3.7.0",
    "opencv-python-headless>=4.10.0",
    "Pillow>=11.0.0",
    "numpy>=1.26.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.17.0",

    # --- DI ---
    "dependency-injector>=4.43.0",

    # --- Logging & Observability ---
    "loguru>=0.7.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",

    # --- Utilities ---
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.1",
    "email-validator>=2.2.0",
    "ulid-py>=1.1.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "types-passlib>=1.7.0",
    "types-python-jose>=3.3.0",
    "types-redis>=4.6.0",
    "types-Pillow>=10.2.0",
    "sqlalchemy[mypy]>=2.0.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spectre"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires database)",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "dependency_injector.*",
    "slowapi.*",
    "authlib.*",
    "tensorflow.*",
    "keras.*",
    "cv2.*",
    "pyotp.*",
    "ulid.*",
    "loguru.*",
]
ignore_missing_imports = true
